# sap-oss-v1

./: .clinerules  .clinerules.spec-drift-auditor  .env.example  .gitignore  MICROSERVICES.md  Makefile  SBOM.md  SECURITY.md  arabic-merged.tex  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  nginx.prod.conf  sap-ai-experience-map.md  sap-ai-experience-map.yaml
mangle-query-service/: .env.example  IMPROVEMENTS.md  go.mod  go.sum  pyproject.toml  requirements.txt
mangle-query-service/client/typescript/: query.proto
mangle-query-service/cmd/server/: main.go  main.py
mangle-query-service/config/: settings.py
mangle-query-service/connectors/: aicore_adapter.py  hana.py  streaming_client.py  vocabulary_client.py
mangle-query-service/data_products/: registry.yaml
mangle-query-service/deploy/: docker-compose.yaml
mangle-query-service/docs/: CODE-REVIEW.md  HARDCODING-AUDIT.md  PRODUCTION-READINESS-CHECKLIST.md  REGULATIONS-COMPLIANCE-REVIEW.md
mangle-query-service/docs/tracking/: DAILY-TRACKER.md
mangle-query-service/efficiency/: __init__.py
mangle-query-service/hippocpp/: PARITY-MATRIX.md  PARITY-SUMMARY.json  README.md
mangle-query-service/hippocpp/mangle/: rules.mg
mangle-query-service/hippocpp/mojo/: catalog.🔥  common.🔥
mangle-query-service/hippocpp/scripts/: differential_harness.py  parity_gate.py  run_backend_hippocpp.sh  run_backend_kuzu.sh  run_query_corpus.py
mangle-query-service/hippocpp/zig/: build.zig
mangle-query-service/intelligence/: __init__.py  adaptive_router.py  hana_speculative_executor.py  query_rewriter.py  reranker.py
mangle-query-service/internal/config/: config.go
mangle-query-service/internal/engine/: engine.go  engine_test.go  routing_test.go
mangle-query-service/internal/es/: client.go  client_test.go  indices.go
mangle-query-service/internal/predicates/: es_business.go  es_business_test.go  es_cache.go  es_cache_test.go  es_hybrid.go  es_hybrid_test.go  mcp_classify.go  mcp_entities.go  mcp_llm.go  mcp_rerank.go  mcp_test.go
mangle-query-service/internal/resilience/: circuit_breaker.go  circuit_breaker_test.go  metrics.go  metrics_test.go
mangle-query-service/internal/server/: grpc.go  grpc_test.go
mangle-query-service/internal/sync/: batch_etl.go  batch_etl_test.go  cache_invalidation.go  cdc_listener.go
mangle-query-service/mcp_server/: langchain_hana_mcp.py
mangle-query-service/middleware/: rate_limiter.py  resilient_client.py  retry_handler.py
mangle-query-service/observability/: health.py
mangle-query-service/openai/: __init__.py  assistants.py  batches.py  embeddings.py  files.py  fine_tuning.py  realtime_conversation.py  router.py  streaming.py  threads.py  vector_store_file_batches.py
mangle-query-service/performance/: hana_semantic_cache.py
mangle-query-service/routing/: __init__.py  model_registry.py  model_router.py  service_router.py
mangle-query-service/rules/: agent_classification.mg  governance.mg  rag_enrichment.mg  routing.mg
mangle-query-service/scripts/: populate_mm_sd_fields.py
mangle-query-service/testing/: __init__.py  framework.py
mangle-query-service/tests/integration/: __init__.py  test_realtime_api.py  test_responses_api.py
mangle-query-service/tests/unit/: test_batches.py  test_cache_layer.py  test_completions.py  test_fine_tuning_advanced.py  test_http_client.py  test_logging.py  test_moderations.py  test_realtime.py  test_realtime_conversation.py  test_realtime_websocket.py  test_resilient_client.py  test_response_output.py  test_response_store.py  test_settings.py  test_threads.py  test_validation.py  test_vector_store_file_batches.py  test_vector_store_files.py
src/data/mangle-query-service/: .env.example  Dockerfile  Dockerfile.python  TECHNICAL-ASSESSMENT.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
src/generativeUI/data-cleaning-copilot-main/: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  TECHNICAL-ASSESSMENT.md  pyproject.toml
src/training/: .clinerules  .clinerules.runtime-monitor  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  SCHEMA_INTEGRATION.md  TRAINING_REVIEW.md  check_kuzu.sh  count_kuzu_files.py  docker-compose.yml  pyproject.toml  specification-addendum.yaml
src/training/benchmarks/: bench_api.py  bench_pipeline.sh  evaluate_specialist.py
src/training/data/: 1_register.csv  2_stagingschema.csv  2_stagingschema_logs.csv  3_validations.csv  DATA_DICTIONARY.xlsx  ESG_ DATA_DICTIONARY.xlsx  ESG_Prompt_samples.xlsx  NFRP_Account_AM.xlsx  NFRP_Cost_AM.xlsx  NFRP_Location_AM.xlsx  NFRP_Product_AM.xlsx  NFRP_Segment_AM.xlsx  Performance CRD - Fact table.csv  arabic_financial_terms.json  team_seeds.yaml
src/training/data_products/: esg_sustainability.yaml  performance_bpc.yaml  registry.yaml  staging_schema.yaml  treasury_capital_markets.yaml
src/training/hippocpp/: CONVERSION-TRACKER-FULL.md  PARITY-DIFF.json  PARITY-MATRIX.md  PARITY-SUMMARY.json  README.md
src/training/nvidia-modelopt/: .gitignore  API.md  Dockerfile  GPU_COMPARISON.md  MULTI_GPU_STRATEGY.md  SECURITY.md  auth_keys.db  deploy.sh  ec2_t4_setup.sh  requirements.txt  training_graph.db
src/training/pipeline/: Makefile  __init__.py  __main__.py  csv_parser.py  hana_client.py  hana_schema_extractor.py  hana_sql_builder.py  json_emitter.py  main.py  requirements.txt  schema_extractor.py  schema_registry.py  simula_complexity_calibrator.py  simula_config.py  simula_coverage_evaluator.py  simula_critic_validator.py  simula_data_generator.py  simula_diversity_analyzer.py  simula_diversity_optimizer.py  simula_llm_client.py  simula_taxonomy_builder.py  simula_taxonomy_evaluator.py  simula_tts_drift_evaluator.py  simula_tts_drift_monitor.py  simula_tts_drift_sampler.py  spider_formatter.py  team_context.py  team_resolver.py  template_expander.py  template_parser.py
src/training/schema_pipeline/: data_generator.py  massive_term_generator.py  prepare_training_data.py  real_schema_parser.py  schema_validator.py  (+4 more)
(+8579 files in other folders)
