[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangle-query-service"
version = "0.1.0"
description = "OpenAI-compatible API gateway for SAP AI Core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
graph = [
    # HippoCPP is the primary graph backend (in-repo Zig engine, Kuzu-compatible API).
    # Install kuzu as fallback if hippocpp native engine is unavailable:
    # pip install kuzu>=0.7.0
    # hippocpp is vendored at hippocpp/python/ and injected via PYTHONPATH by kuzu_store.py.
    "kuzu>=0.7.0",
]

[tool.setuptools]
packages = ["mangle_query_service", "openai", "middleware", "config", "routing", "connectors", "performance", "observability", "testing", "efficiency", "intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
