[project]
name = "data-cleaning-copilot"
version = "0.1.0"
description = "This is a tool that takes in database schema and meta data describing that schema (e.g. description of the data in the tables, how the elements in the tables are connected, how the data is used) and helps users to formulate queries that can find errors or inconsistencies in the data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "black>=25.1.0",
    "boto3>=1.38.27",
    "frictionless>=5.18.1",
    "gradio>=5.42.0",
    "instructor[bedrock]>=1.10.0",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.73",
    "loguru>=0.7.3",
    "networkx>=3.3",
    "numpy>=2.1.0",
    "pandas>=2.2.0,<2.3",
    "pandera[pandas]>=0.25.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "relbench>=1.1.0",
    "ruff>=0.12.3",
    "sap-ai-sdk-gen>=5.4.5",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "ydata-profiling>=4.18.0",
    "kuzu>=0.7.0",
]

[tool.uv.extra-build-dependencies]
htmlmin = ["setuptools"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Keep pa.Field declarations on single lines when possible
skip-magic-trailing-comma = true
